Swagger docs for handlers done
